fix: corrige a visibilidade do texto digitado no campo de busca da navbar

--- a/main.css
+++ b/main.css
@@ -6454,7 +6454,7 @@ i[class^='fi'] {
 .form-group input,
 .form-group select,
 .form-group textarea,
-input[type="text"],
+input[type="text"]:not(.nav-search-input),
 input[type="email"],
 input[type="password"],
 input[type="date"],
@@ -6472,7 +6472,7 @@ textarea {
 .form-group input:hover,
 .form-group select:hover,
 .form-group textarea:hover,
-input[type="text"]:hover,
+input[type="text"]:hover:not(.nav-search-input),
 input[type="email"]:hover,
 input[type="password"]:hover,
 input[type="date"]:hover,
@@ -6486,7 +6486,7 @@ textarea:hover {
 .form-group input:focus,
 .form-group select:focus,
 .form-group textarea:focus,
-input[type="text"]:focus,
+input[type="text"]:focus:not(.nav-search-input),
 input[type="email"]:focus,
 input[type="password"]:focus,
 input[type="date"]:focus,
